--- a/App/Frontend/package.json
+++ b/App/Frontend/package.json
@@ -20,6 +20,7 @@
     "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.16.4",
     "@radix-ui/react-icons": "^1.3.2",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.8.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
